# toughreact-concrete

./: .gitattributes  .gitignore  404.html  LICENSE  M2_28d.py  README.md  REFONTE.md  index.html  mkdocs.yml  new_M2_28d.py  objects.inv  pyproject.toml  requirements.txt
.github/workflows/: docs.yml  tests.yml
api/geometry/: index.html
api/materials/: index.html
api/model/: index.html
docs/: index.md  installation.md  quickstart.md
docs/api/: geometry.md  materials.md  model.md
docs/user_guide/: boundary.md  geometry.md  hydration.md  materials.md  postprocessing.md
installation/: index.html
quickstart/: index.html
search/: search_index.json
tests/: conftest.py
tests/geometry/: test_constrgeom.py
tests/integration/: test_workflow_no_solver.py
tests/materiau/: test_compute_hydration.py  test_mat_poreux.py
tests/model/: test_cond_limit.py  test_conversion_species.py  test_physical_const.py
toughreact_concrete/: __init__.py
toughreact_concrete/data/: 1st_Thermoddem.txt  Th_Yoshida2021.txt  Thermoddem_2023.txt  Thermoddem_cemdata.txt  old_Thermoddem.txt  trame_chemical.inp  trame_chemical_atl_seawater.inp  trame_chemical_bnd_solution.inp  trame_chemical_reactive_transport.inp  trame_flow.inp  trame_flow_boundary.inp  trame_solute.inp  trame_solute_boundary.inp  trame_solute_reactive_transport.inp
toughreact_concrete/geometry_trc/: constrgeom.py
toughreact_concrete/materiau/: __init__.py  mat_ciment.py  mat_poreux.py
toughreact_concrete/materiau/hydration/: calcul_hydratation.py  floculation.py  hydrationDIM_CTOA4.py  pyisocalc.py
toughreact_concrete/model/: __init__.py  cond_limit.py  conversion_species.py  element_struct.py  mesh.py  post.py  pre.py  simulation.py  t2R_savechem.py  toughreact.py
toughreact_concrete/model/data/: bd_materiaux.py  (+4 more)
user_guide/boundary/: index.html
user_guide/geometry/: index.html
user_guide/hydration/: index.html
user_guide/materials/: index.html
user_guide/postprocessing/: index.html
